--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,15 @@ venv/
 
 # OS-specific
 .DS_Store
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Node modules
+node_modules/
+
+# Build outputs
+dist/
+build/
